--- a/templates/home.html
+++ b/templates/home.html
@@ -11,17 +11,25 @@
         height: 360px;
         width: 100%;
         object-fit: cover;
+        margin-bottom: 16px;
       }
     </style>
   </head>
 
   <body>
+    {% include "nav.html" %}
+    <img class = "img-fluid" id = "banner" src = "https://career-site-tut--elinorsel.repl.co/static/Banner_crop.jpg">
     <div class= "container">
       <h1 class = "text-center mt-4 mb-4" >Selinder Company</h1>
-      <img class = "img-fluid" id = "banner" src = "https://career-site-tut--elinorsel.repl.co/static/Banner.jpg">
-      <h2 class = "text-center mt-2 mb-2"> About Us</h2>
-      <p class = "lead">Selinder Company is thrilled to announce its latest hiring initiative, as we continue to expand and strengthen our dynamic team. As a leader in the field of innovative technology solutions, we are dedicated to attracting top talent to fuel our mission of driving forward advancements in the digital landscape. Our commitment to fostering a diverse and inclusive work environment is unwavering, and we encourage individuals from all backgrounds to explore the exciting career opportunities that Selinder has to offer. With a strong emphasis on professional growth, collaboration, and cutting-edge projects, joining Selinder Company means joining a vibrant community of forward-thinkers and innovators. If you're ready to make an impact and contribute to the future of technology, we invite you to explore our current job openings and embark on an incredible journey with Selinder. Your skills and creativity are exactly what we're looking for to shape the world of tomorrow.</p>
 
+      <div class = "row">
+        <div class= "col-6">
+          <p class = "lead">Selinder Company is thrilled to announce its latest hiring initiative, as we continue to expand and strengthen our dynamic team. As a leader in the field of innovative technology solutions, we are dedicated to attracting top talent to fuel our mission of driving forward advancements in the digital landscape. Our commitment to fostering a diverse and inclusive work environment is unwavering, and we encourage individuals from all backgrounds to explore the exciting career opportunities that Selinder has to offer. With a strong emphasis on professional growth, collaboration, and cutting-edge projects, joining Selinder Company means joining a vibrant community of forward-thinkers and innovators. If you're ready to make an impact and contribute to the future of technology, we invite you to explore our current job openings and embark on an incredible journey with Selinder. Your skills and creativity are exactly what we're looking for to shape the world of tomorrow.</p>
+       </div> 
+        <div class= "col-6">
+          <img src="/static/people.jpg" style="height:360px;border-radius:4px;">
+        </div> 
+      </div>
       <h2 class = "text-center mt-2 mb-2">Open Positions</h2>
       <p>
         {% for job in jobs %}
@@ -29,12 +37,10 @@
         {% endfor %}
       </p>
       <div class = "text-center">
-        <button class="btn btn-primary btn-lg">Contact Us!</button>      
+        <button class="btn btn-warning btn-lg">Contact Us!</button>      
       </div>
-      <p class = "text-center mt-4">
-        copyright 2023, Selinder Company
-      </p>
 
   </div>
+    {% include "footer.html" %}
   </body>
 </html>
