--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -11,7 +11,7 @@
     {% endif %}
   </div>
   <div class = "col-3"> 
-      <button type="button" class="btn btn-outline-primary mt-4">Apply</button>
+      <a href="mailto:elinor.selinder@gmail.com?subject=Application for {{job["title"]}}" type="button" class="btn btn-outline-warning mt-4 ml-8">Apply</a>
   </div>
 
     
