mobile aesthetic improvements

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,10 +23,10 @@
       <h1 class = "text-center mt-4 mb-4" >Selinder Company</h1>
 
       <div class = "row">
-        <div class= "col-6">
+        <div class= "col-md-6 .d-none .d-sm-block .d-md-none">
           <p class = "lead">Selinder Company is thrilled to announce its latest hiring initiative, as we continue to expand and strengthen our dynamic team. As a leader in the field of innovative technology solutions, we are dedicated to attracting top talent to fuel our mission of driving forward advancements in the digital landscape. Our commitment to fostering a diverse and inclusive work environment is unwavering, and we encourage individuals from all backgrounds to explore the exciting career opportunities that Selinder has to offer. With a strong emphasis on professional growth, collaboration, and cutting-edge projects, joining Selinder Company means joining a vibrant community of forward-thinkers and innovators. If you're ready to make an impact and contribute to the future of technology, we invite you to explore our current job openings and embark on an incredible journey with Selinder. Your skills and creativity are exactly what we're looking for to shape the world of tomorrow.</p>
        </div> 
-        <div class= "col-6">
+        <div class= "d-none d-md-block col-md-6">
           <img src="/static/people.jpg" style="height:360px;border-radius:4px;">
         </div> 
       </div>
@@ -37,7 +37,7 @@
         {% endfor %}
       </p>
       <div class = "text-center">
-        <button class="btn btn-warning btn-lg">Contact Us!</button>      
+        <a href="mailto:elinor.selinder@gmail.com?subject=Question about XXX" class="btn btn-warning btn-lg">Contact Us!</a>      
       </div>
 
   </div>
