Stylistic improvements jobpage

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,18 +4,12 @@
     <title>Selinder Company</title>
     <!-- only for title, bts info and JS interactivity -->
     {% include "bootstrap.html" %}
-      #banner{
-        height: 360px;
-        width: 100%;
-        object-fit: cover;
-        margin-bottom: 16px;
-      }
-    </style>
+
   </head>
 
   <body>
     {% include "nav.html" %}
-    <img class = "img-fluid" id = "banner" src = "https://career-site-tut--elinorsel.repl.co/static/Banner_crop.jpg">
+    {% include "banner.html" %}
     <div class= "container">
       <h1 class = "text-center mt-4 mb-4" >Selinder Company</h1>
 
